Wed Sep 22 17:12:01 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/openssl/utils.rb (OpenSSL#silent): always restore $VERBOSE.
	  [ruby-dev:42285]

Wed Sep 22 16:59:40 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/test_prime.rb (TestPrime#test_new): the warning expected have
	  not been displayed when $VERBOSE == nil. Patch by Shota Fukumori
	  a.k.a. sora_h. [ruby-dev:42272]
	  Recovers $stderr even if StringIO.new fails. Reported by unak.

Wed Sep 22 01:55:48 2010  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_method.rb: fix last commit.

Wed Sep 22 01:49:52 2010  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_method.rb: add a test for [ruby-core:30534].

Wed Sep 22 00:52:44 2010  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/rdoc/ri/store.rb (save_cache): remove duplicate entries.

Wed Sep 22 00:00:05 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_f_pathname): Pathname() translated
	  from pathname.rb.

Tue Sep 21 22:18:30 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/mkconfig.rb: fixed build problem on mswin64 introduced in r29278.

Tue Sep 21 02:42:35 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/pathname/test_pathname.rb (TestPathname#test_mkdir): fix typo.

Mon Sep 20 23:23:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (bracket): get rid of scanning at the end of the pattern
	  string, not to raise an exception while globbing command line.
	  [ruby-core:32478]

Mon Sep 20 11:25:49 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (Init_pathname): Pathname#=~ undefinition
	  translated from pathname.rb.

Mon Sep 20 02:34:11 2010  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (check_rounding_mode, BigDecimal_mode):
	  raise ArgumentError instead of TypeError passing invalid modes.

	* test/bigdecimal/test_bigdecimal.rb (test_mode, test_round):
	  change against the above modifications.

Sun Sep 19 22:08:39 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
